# Atmosphere

./: CMakeLists.txt  DrawCanvas.cpp  MainWindow.cpp  main.cpp
AtmosphereModel/: AtmosphereModel.cpp
AtmosphereModel/glsl/: definitions.frag  functions.frag  kGeometryShader.geom
Shaders/: Demo.frag
Utilities/: Camera3D.cpp  Entity.cpp  OpenGLTexture.cpp  OpenGLVersion.cpp  OpenGLVersion.h  OpenGLWidget.cpp  OpenGLWidget.h  Player.cpp
